--- a/Projetos/mini-cordel/style.css
+++ b/Projetos/mini-cordel/style.css
@@ -14,7 +14,8 @@ header {
 header h1 {
     color: white;
     font-family: 'Passion One', sans-serif;
-    font-size: 5em;
+    font-size: 10vw;
+    font-variant: small-caps;
     text-align: center;
 }
 
@@ -36,17 +37,47 @@ header a:hover {
 }
 
 section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
     font-family: 'Sriracha', cursive;
-    font-size: 2em;
+    font-size: 4vw;
     padding: 40px;
 }
 
 section#foto-1 {
     background-image: url(imagens/background001.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    box-shadow: 5px 5px 5px inset rgba(0, 0, 0, 0.308);
+}
+
+section#foto-1 p {
+    width: 400px;
+    background-color: rgba(0, 0, 0, 0.253);
+    color: white;
+    padding-left: 10px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.253);
 }
 
 section#foto-2 {
     background-image: url(imagens/background002.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    box-shadow: 5px 5px 5px inset rgba(0, 0, 0, 0.308);
+}
+
+section#foto-2 p {
+    width: 400px;
+    background-color: rgba(0, 0, 0, 0.253);
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.253);
 }
 
 footer {
