--- a/Projetos/mini-iphone/style.css
+++ b/Projetos/mini-iphone/style.css
@@ -37,3 +37,22 @@ main {
     height: 471px;
     width: 269px;
 }
+
+#redes-sociais {
+    text-align: right;
+}
+
+#redes-sociais img {
+    height: 50px;
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.37);
+    box-sizing: border-box;
+}
+
+#redes-sociais img:hover {
+    border: 2px solid white;
+    transform: translate(-3px, -3px);
+    transition: transform 0.5s;
+}
