--- a/Exercicios/ex026/mq05/style.css
+++ b/Exercicios/ex026/mq05/style.css
@@ -55,8 +55,8 @@ body {
 }
 
 main {
+    width: 80vw;
     background-color: white;
-    width: 600px;
     margin: auto;
     margin-top: 10px;
     padding: 20px;
