--- a/Projetos/projeto-login/estilos/mf.css
+++ b/Projetos/projeto-login/estilos/mf.css
@@ -25,7 +25,7 @@ section#login {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
-    height: 500px;
+    height: 620px;
     width: 250px;
     padding: 20px;
     border-radius: 16px;
@@ -57,16 +57,61 @@ main p {
     margin-bottom: 10px;
 }
 
+#icons {
+    font-size: 2em;
+    padding-top: 3px;
+}
+
+.campos input{
+    height: 100%;
+    width: calc(100% - 37px);
+    transform: translateY(-11px);
+    border: 1px solid #7839F4;
+    border-radius: 8px;
+    padding: 4px;
+}
+
 p#email {
     background-color: #7839F4;
+    color: white;
     border-radius: 8px;
+    height: 40px;
+
 }
 
 p#password {
     background-color: #7839F4;
+    color: white;
     border-radius: 8px;
+    height: 40px;
+    margin-bottom: 30px;
 }
 
-p#bottons {
+
+p#bottons input {
     display: block;
+    width: 100%;
+    height: 40px;
+    background-color: #7839F4;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+p#bottons input:hover {
+    background-color: #46C9F9;
+}
+
+p#bottons input#forgot {
+    background-color: white;
+    color: #7839F4;
+    border: 1px solid;
+}
+
+p#bottons input#forgot:hover {
+    background-color: white;
+    color: #46C9F9;
 }
